MulitCloudProject/gitops/apps/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clearing-engine
  labels:
    istio-injection: enabled
    app.kubernetes.io/part-of: multicloud-clearing-engine
    compliance: hipaa-sox-gdpr
